Refactor: updateAlisveris metodu guncellendi ve genel performans iyilestirmeleri yapildi